tests/paczka2/big_fuzzy/58881024.err
Error in line 2: A130 A664 24,6
Error in line 3: 3veHhwLO A450 2,3
Error in line 20: sXE9s A450 65,3
Error in line 17: wVm9p A130 92,2
Error in line 29: zp94rhYyWo A130 17,1
Error in line 46: A130 A130 47,7
Error in line 48: A130 A450 21,8
Error in line 49: A130 A664 40,5
Error in line 60: sN8BbD1eMss A664 40,0
Error in line 65: D9Xt1BYtc A450 37,7
Error in line 69: D9Xt1BYtc A664 91,7
Error in line 80: sXE9s A664 0,3
Error in line 71: zp94rhYyWo A130 55,7
Error in line 88: sN8BbD1eMss S615 91,2
Error in line 96: sN8BbD1eMss A450 -2,6
Error in line 98: zp94rhYyWo A450 65,5
Error in line 95: sN8BbD1eMss A450 69,8
Error in line 102: D9XtABYtc S6A5 8,6
Error in line 106: wVm9p S615 37,9
Error in line 139: zp94rhYyWo A130 84,0
Error in line 148: 3veHhwLO A130 20,9
Error in line 152: 3veHhwLO A450 30,2
Error in line 154: A130 A664 89,8
Error in line 149: zp94rhYyWo A450 89,0
Error in line 138: D9Xt1BYtc A130 59,5
Error in line 160: D9Xt1BYtc A450 10,3
Error in line 168: zp94rhYyWo S615 -1,6
Error in line 157: zp94rhYyWo S615 7,3
Error in line 170: 3veHhwLO A450 91,8
Error in line 151: wVm9p A130 48,7
Error in line 165: sXE9s S615 8,1
Error in line 180: sXE9s A664 5,2
Error in line 178: wVm9p A450 58,7
Error in line 183: wVm9p A130 47,8
Error in line 189: wVm9p S615 31,6
Error in line 196: sN8BbD1eMss A664 9,8
Error in line 204: D9Xt1BYtc AS50 67,9
Error in line 207: wVm9p A664 60,7
Error in line 214: zp94rhYyWo A130 12,0
Error in line 222: 3veHhwLO A664 38,5
Error in line 212: sXE9s A450 153,6
Error in line 225: D9Xt1BYtc A450 184,0
Error in line 235: D9Xt1BYtc A664 30,1
Error in line 234: zp94rhYyWo A450 227,8
Error in line 238: zp94rhYyWo S615 30,8
